--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "name": "startbootstrap-creative",
     "version": "7.0.7",
     "scripts": {
-        "build": "./convert_images.sh && npm run clean && npm run build:pug && npm run build:scss && npm run build:scripts && npm run build:assets",
+        "build": "./populate.py && ./convert_images.sh && npm run clean && npm run build:pug && npm run build:scss && npm run build:scripts && npm run build:assets",
         "build:assets": "node scripts/build-assets.js",
         "build:pug": "node scripts/build-pug.js",
         "build:scripts": "node scripts/build-scripts.js",
