start research section

--- a/src/data.yaml
+++ b/src/data.yaml
@@ -61,7 +61,7 @@ portfolio:
 
   - name: Algebraic Topology, in memory of Hans-Joachim Baues, Bonn, 2022
     category: Conference
-    image: bonn2022
+    image: bonn
 
   - name: Hochschil (Co)Homology and Applications, Oberwolfach, 2024
     category: Workshop
