--- a/src/assets/bib/presentations.yml
+++ b/src/assets/bib/presentations.yml
@@ -269,7 +269,7 @@
   title: Exotic triangulated categories
   year: 2007
 
-- location: D{\"u}sseldorf, Germany
+- location: Düsseldorf, Germany
   type: conference
   event: Sixth Nordrhein-Westfalen Topology Meeting
   url: http://reh.math.uni-duesseldorf.de/%7Einternet/NRWTopology/
