--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,3 +21,11 @@ jobs:
       - name: populate
         run:
           python populate.py
+      - name: setup node
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+      - name: Install dependencies
+        run: npm install
+      - name: build nmp
+        run: npm run build --if-present 
