build bib file and site simultaneously

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,24 @@ jobs:
       - name: Install dependencies
         run:
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r requirements.txt    
+      - name: get bibtex
+        run:
+          python bibliographer-github.py
+      - name: convert bibtex to CSL JSON
+        uses: docker://pandoc/core:3.2
+        with:
+          args: >-  # allows you to break string into multiple lines
+            -f
+            bibtex
+            output.bib
+            -t
+            csljson
+            -o
+            middle.json
+      - name: convert bibtex to json and add some extras
+        run:
+          python bibliographer-github-2.py  
       - name: populate
         run:
           python populate.py
