--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,4 +47,6 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: build nmp
-        run: npm run build --if-present 
+        run: npm run build --if-present
+      - name: get output in the repo
+        uses: stefanzweifel/git-auto-commit-action@v4
