--- a/src/assets/bib/presentations.yml
+++ b/src/assets/bib/presentations.yml
@@ -3,7 +3,7 @@
   type: seminar
   event: University of Haifa Topology & Geometry Seminar
   file: Haifa2023
-  title: An application of homotopy theory to singularity theory II
+  title: An application of homotopy theory to singularity theory
   year: 2023
 
 - location: Barcelona, Spain
