--- a/src/assets/bib/presentations.yml
+++ b/src/assets/bib/presentations.yml
@@ -284,7 +284,7 @@
   url: http://mate.dm.uba.ar/%7Egcorti/VASBI.htm
   daymonth: 31 August-6 September
   file: vasbi
-  title: One the 1-type of Waldhausen $K$-theory
+  title: On the 1-type of Waldhausen $K$-theory
   year: 2006
 
 - location: Madrid, Spain
