--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,11 +9,11 @@ jobs:
 
     steps:
       - name: checkout repo content
-        uses: actions/checkout@v2 # checkout the repository content
+        uses: actions/checkout@v3 # checkout the repository content
         with:
           submodules: true
       - name: setup python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: '3.12' #install the python version needed    
       - name: Install dependencies
@@ -49,9 +49,8 @@ jobs:
       - name: build nmp
         run: npm run build --if-present
       - name: get output in the repo
-        uses: stefanzweifel/git-auto-commit-action@v4
-        
-      - name: Deploy file
+        uses: stefanzweifel/git-auto-commit-action@v5
+      - name: Deploy to my domain
         uses: wlixcc/SFTP-Deploy-Action@v1.2.4
         with:
           username: ${{ secrets.FTP_USERNAME }}
@@ -61,3 +60,19 @@ jobs:
           remote_path: '/fmuro'
           sftp_only: true
           password: ${{ secrets.FTP_PASSWORD }}
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: ./docs
+          
+# Deployment job to GutHub Pages
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
