build locally with vscode

--- a/output.yml
+++ b/output.yml
@@ -927,7 +927,7 @@
     \ Mathematical Society (EMS)},\n    Language = {English},\n    Keywords = {18F25,19D10},\n\
     \        }"
   container-title: "$K$-theory and noncommutative geometry. Proceedings of the ICM\
-    \ 2006 satellite conference, valladolid, spain, august 31\u2013september 6, 2006"
+    \ 2006 satellite conference, Valladolid, Spain, August 31\u2013September 6, 2006"
   id: zbMATH05381934
   issued:
     date-parts:
